# mcp-format-compression

./: .gitignore  .gitmodules  CLAUDE.md  analyze_results.py  curr_status.md  rerun_failed_categories.sh  run_experiments.py  token_analysis.py
cluster/: copy_to_cluster.sh  ensure_bfcl_models.py  install_venv2.slurm  install_vllm.slurm  models.txt  run_all.sh  run_benchpp.slurm  run_bfcl.slurm  run_eval.slurm  run_model.slurm  run_model_v2.slurm  run_universe.slurm  salvage_benchpp_logs.py  setup.sh  submit_chain.sh  test_vllm.slurm
paper/: bibliography.bib  how_to_write_a_paper.md  main.tex
paper/figures/: generate_figures.py
paper/survey-energy-efficiency/: bibliography.bib  main.tex
paper/token-compression/: bibliography.bib  main.tex  main_backup.tex
paper/token-compression/figures/: generate_figures.py  model_format_tradeoff.py  model_tradeoff.py
paper/token-compression/figures/scripts/: collect_multi_model_data.py  multi_model_data.json
paper/token-compression/presentation/: generate_slides.py
results_archive/: all_results.md
results_archive/cluster_monday_2026_04_20/: README.md  bfcl_mistral_accuracy.md  bfcl_mistral_tokens.md  stabletoolbench_sopr.md  stabletoolbench_tokens.md
shared_format/: .gitignore  pyproject.toml  test_shared_format.py
shared_format/src/shared_format/: __init__.py  converter.py  prompt_snippets.py  token_counter.py
